--- a/data/weather.ipynb
+++ b/data/weather.ipynb
@@ -53,7 +53,8 @@
     "# Import necessary libraries\n",
     "from pathlib import Path\n",
     "import csv\n",
-    "import pandas as pd\n"
+    "import pandas as pd\n",
+    "from libs import weather\n"
    ]
   },
   {
@@ -480,6 +481,30 @@
     "# Write data to csv\n",
     "clean_weather_data.to_csv(csv_output_path)\n"
    ]
+  },
+  {
+   "source": [
+    "### New function to pull multiple weather stations in a specific state\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Call multiple weather stations and combine data into single output\n",
+    "weather.for_state('NE', '20001026', '20201028','csv')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
