--- a/notebooks/jonathan.ipynb
+++ b/notebooks/jonathan.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
    "outputs": [],
    "source": [
     "# Function to call multiple stations in a specified state based on a timeframe with a selected output format: dataframe or csv file\n",
-    "def for_state(state_name, start_date, end_date, return_format):\n",
+    "def test_for_state(state_name, start_date, end_date, return_format):\n",
     "    '''Calls multiple stations in a specified state based on a timeframe, retrieves \n",
     "    a daily precipitation and average temperature, if available, for each station, \n",
     "    averages the data of the three weather stations, drops the calculated values \n",
@@ -406,7 +406,7 @@
     "        # Output to csv file\n",
     "        elif return_format == 'csv':\n",
     "            # Create output path and write data to csv\n",
-    "            csv_output_path = Path('../data/clean_data/test_state_weather_data.csv')\n",
+    "            csv_output_path = Path('../data/clean_data/state_weather_data_clean.csv')\n",
     "            state_df.to_csv(csv_output_path)\n",
     "        else:\n",
     "            # Return message that return format not found\n",
@@ -418,37 +418,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "            precipitation  average_temperature\n",
-       "date                                          \n",
-       "2000-10-26         0.0000                 55.5\n",
-       "2000-10-27         0.0167                 51.5\n",
-       "2000-10-28         0.6767                 58.0\n",
-       "2000-10-29         0.5800                 52.2\n",
-       "2000-10-30         0.0000                 55.7\n",
-       "...                   ...                  ...\n",
-       "2020-10-24         0.0000                 28.3\n",
-       "2020-10-25         0.0234                 22.3\n",
-       "2020-10-26         0.0433                 16.0\n",
-       "2020-10-27         0.0000                 21.8\n",
-       "2020-10-28         0.0000                 37.7\n",
-       "\n",
-       "[7244 rows x 2 columns]"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>precipitation</th>\n      <th>average_temperature</th>\n    </tr>\n    <tr>\n      <th>date</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2000-10-26</th>\n      <td>0.0000</td>\n      <td>55.5</td>\n    </tr>\n    <tr>\n      <th>2000-10-27</th>\n      <td>0.0167</td>\n      <td>51.5</td>\n    </tr>\n    <tr>\n      <th>2000-10-28</th>\n      <td>0.6767</td>\n      <td>58.0</td>\n    </tr>\n    <tr>\n      <th>2000-10-29</th>\n      <td>0.5800</td>\n      <td>52.2</td>\n    </tr>\n    <tr>\n      <th>2000-10-30</th>\n      <td>0.0000</td>\n      <td>55.7</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2020-10-24</th>\n      <td>0.0000</td>\n      <td>28.3</td>\n    </tr>\n    <tr>\n      <th>2020-10-25</th>\n      <td>0.0234</td>\n      <td>22.3</td>\n    </tr>\n    <tr>\n      <th>2020-10-26</th>\n      <td>0.0433</td>\n      <td>16.0</td>\n    </tr>\n    <tr>\n      <th>2020-10-27</th>\n      <td>0.0000</td>\n      <td>21.8</td>\n    </tr>\n    <tr>\n      <th>2020-10-28</th>\n      <td>0.0000</td>\n      <td>37.7</td>\n    </tr>\n  </tbody>\n</table>\n<p>7244 rows × 2 columns</p>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 45
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'test_for_state' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-2eee5353d6a3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mresponse\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtest_for_state\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'NE'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'20001026'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'20201028'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'df'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mresponse\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'test_for_state' is not defined"
+     ]
     }
    ],
    "source": [
-    "response = for_state('NE', '20001026', '20201028','df')\n",
+    "response = test_for_state('NE', '20001026', '20201028','df')\n",
     "response"
    ]
   },
